--- a/views/books/books.ejs
+++ b/views/books/books.ejs
@@ -55,18 +55,18 @@
                 Interface
             </div>
 
-            <!-- Nav Item - Pages Collapse Menu -->
+            <!-- Nav Item - Manage Books Collapse Menu -->
             <li class="nav-item active">
                 <a class="nav-link" href="/books">
                     <i class="fas fa-fw fa-inbox"></i>
                     <span>Manage Books</span></a>
             </li>
 
-            <!-- Nav Item - Utilities Collapse Menu -->
+            <!-- Nav Item - Manage Orders Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link" href="charts.html">
+                <a class="nav-link" href="/orders">
                     <i class="fas fa-fw fa-chart-area"></i>
-                    <span>Utilities</span></a>
+                    <span>Manage Orders</span></a>
             </li>
 
             <!-- Divider -->
